<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache.bifromq.tenon</groupId>
    <artifactId>tenon-java-build</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>Tenon Java Build</name>
    <url>https://github.com/apache/incubator-bifromq-tenon</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>../../ipc/java/tenon-ipc</module>
        <module>plugin-sdk</module>
        <module>maven-plugin</module>
        <module>plugin-archetype</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.outputTimestamp>2000-01-01T00:00:00Z</project.build.outputTimestamp>
        <maven.compiler.release>25</maven.compiler.release>
        <tenon.java.version>[25.0.3,25.0.4)</tenon.java.version>
        <tenon.maven.version>[3.9.16,3.9.17)</tenon.maven.version>
        <protobuf.version>4.36.2</protobuf.version>
        <grpc.version>1.84.0</grpc.version>
        <protobuf.maven.plugin.version>5.1.9</protobuf.maven.plugin.version>
        <build.helper.maven.plugin.version>3.6.2</build.helper.maven.plugin.version>
        <junit.version>6.1.3</junit.version>
        <jackson.version>3.2.2</jackson.version>
        <commons.compress.version>1.28.0</commons.compress.version>
        <json.schema.validator.version>3.0.7</json.schema.validator.version>
        <maven.api.version>3.9.16</maven.api.version>
        <javax.inject.version>1</javax.inject.version>
        <maven.plugin.tools.version>3.16.0</maven.plugin.tools.version>
        <maven.archetype.plugin.version>3.4.1</maven.archetype.plugin.version>
        <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
        <maven.compiler.plugin.version>3.16.0</maven.compiler.plugin.version>
        <maven.enforcer.plugin.version>3.6.3</maven.enforcer.plugin.version>
        <maven.install.plugin.version>3.2.0</maven.install.plugin.version>
        <maven.jar.plugin.version>3.5.1</maven.jar.plugin.version>
        <maven.deploy.plugin.version>3.2.0</maven.deploy.plugin.version>
        <maven.resources.plugin.version>3.5.0</maven.resources.plugin.version>
        <maven.surefire.plugin.version>3.6.0</maven.surefire.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
        <flatten.maven.plugin.version>1.8.0</flatten.maven.plugin.version>
        <spotless.maven.plugin.version>3.10.2</spotless.maven.plugin.version>
        <google.java.format.version>1.36.1</google.java.format.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.bifromq.tenon</groupId>
                <artifactId>tenon-plugin-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.bifromq.tenon</groupId>
                <artifactId>tenon-maven-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty-shaded</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.github.ascopes</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf.maven.plugin.version}</version>
                    <configuration>
                        <protoc kind="binary-maven">
                            <version>${protobuf.version}</version>
                        </protoc>
                        <embedSourcesInClassOutputs>false</embedSourcesInClassOutputs>
                        <fatalWarnings>true</fatalWarnings>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven.clean.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint:all</arg>
                            <arg>-Werror</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven.install.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven.deploy.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                        <systemPropertyVariables>
                            <tenon.contracts.ipc.directory>
                                ${maven.multiModuleProjectDirectory}/../../contracts/ipc
                            </tenon.contracts.ipc.directory>
                            <tenon.contracts.source.directory>
                                ${maven.multiModuleProjectDirectory}/../../contracts/source
                            </tenon.contracts.source.directory>
                            <tenon.contracts.sink.directory>
                                ${maven.multiModuleProjectDirectory}/../../contracts/sink
                            </tenon.contracts.sink.directory>
                            <tenon.contracts.plugin.directory>
                                ${maven.multiModuleProjectDirectory}/../../contracts/plugin
                            </tenon.contracts.plugin.directory>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${maven.plugin.tools.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>${maven.archetype.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>package-apache-legal-files</id>
                        <phase>process-resources</phase>
                        <goals><goal>copy-resources</goal></goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${maven.multiModuleProjectDirectory}/../..</directory>
                                    <filtering>false</filtering>
                                    <includes>
                                        <include>LICENSE</include>
                                        <include>DISCLAIMER</include>
                                    </includes>
                                </resource>
                                <resource>
                                    <directory>${project.basedir}</directory>
                                    <filtering>false</filtering>
                                    <includes><include>NOTICE</include></includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.maven.plugin.version}</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                    <flattenDependencyMode>inherited</flattenDependencyMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten-consumer-pom</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>clean-flattened-consumer-pom</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven.install.plugin.version}</version>
                <inherited>false</inherited>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
                <inherited>false</inherited>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-java-build-toolchain</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>${tenon.java.version}</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>${tenon.maven.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.maven.plugin.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>${google.java.format.version}</version>
                        </googleJavaFormat>
                        <forbidWildcardImports />
                        <removeUnusedImports />
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>check-java-format</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
